# pysdt

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pip.yml  publish.yml  test-publish.yml
sdt-libs/SDT_macosx_lib_83.0.0/SDT/SDT.framework/Versions/Current/: SDT
sdt-libs/SDT_win32_lib_83.0.0/include/SDT/: SDTComplex.h
src/: BindingMacros.h  pysdt.cpp
src/bindings/: Common.cpp  Liquids.cpp  Resonators.cpp
src/pysdt/: __init__.py
src/wrappers/: Analysis.h  Control.h  DCMotor.h  Demix.h  Effects.h  Filters.h  Gases.h  Interactors.cpp  Interactors.h  Liquids.h  Macros.h  Motor.h  Oscillators.h  Resonators.h  WrapperMacros.h
