[build-system]
requires = ["scikit-build-core >=0.10", "nanobind @ git+https://github.com/wjakob/nanobind@master"]
build-backend = "scikit_build_core.build"

[project]
name = "pysdt"
version = "0.0.1"
description = "An example minimal project that compiles bindings using nanobind and scikit-build"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Wenzel Jakob", email = "wenzel.jakob@epfl.ch" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/wjakob/nanobind_example"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
sdist.exclude = ["SDT", "SDT/*"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[dependency-groups]
dev = [
    "nanobind @ git+https://github.com/wjakob/nanobind@master",
    "scikit-build-core[pyproject]>=0.10.7",
]
